Wed Dec 18 22:17:15 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
	  Include only the needed xapian/*.h headers (rather than xapian.h) to
	  reduce inter-file dependencies within the library.

Wed Dec 18 03:24:22 GMT 2013  Olly Betts <olly@survex.com>

	* tests/runtest.in: Report if a test is being run under eatmydata,
	  like we do for running under valgrind.

Wed Dec 18 02:43:47 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_version.h,backends/chert/chert_version.h:
	  Comment out unused set_uuid() and set_uuid_string() methods - they
	  may be useful in future, but we aren't currently using them.  Also
	  make set_uuid() take a const pointer.

Wed Dec 18 02:40:18 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING,configure.ac,tests/runtest.in: Automatically probe for and
	  hook in eatmydata to the testsuite using the wrapper script it now
	  includes.

Wed Dec 18 01:21:07 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update website update info.

Sat Dec 14 06:01:33 GMT 2013  Olly Betts <olly@survex.com>

	* weight/dlhweight.cc,weight/dphweight.cc: Whitespace tweak.

Fri Dec 13 21:06:28 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.cc,backends/brass/brass_cursor.h,
	  backends/brass/brass_table.cc: Reference count blocks in the
	  btree cursor, so cursors can cheaply share blocks.  This can
	  significantly reduce the amount of memory used for cursors
	  for queries which contain a lot of terms (e.g. wildcards which
	  expand to a lot of terms).

Thu Dec 12 22:37:22 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc: Add assertions that we don't read
	  beyond the end of the freespace bitmap.

Thu Dec 12 22:25:04 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/msetcmp.cc: Fix sense of reverse parameter to
	  Enquire::set_sort_by_relevance_then_value.  Reported by "boomboo" on
	  IRC.
	* tests/api_db.cc: Fix testcase sortrel1.