@@ -29,8 +29,8 @@
 
 #include "chert_database.h"
 
-#include <xapian/error.h>
-#include <xapian/valueiterator.h>
+#include "xapian/error.h"
+#include "xapian/valueiterator.h"
 
 #include "backends/contiguousalldocspostlist.h"
 #include "chert_alldocsmodifiedpostlist.h"
