@@ -1,3 +1,8 @@
+Wed Dec 18 22:30:23 GMT 2013  Olly Betts <olly@survex.com>
+
+	* backends/brass/brass_database.cc,backends/chert/chert_database.cc:
+	  Include xapian/*.h with "" not <> inside the library.
+
 Wed Dec 18 22:17:15 GMT 2013  Olly Betts <olly@survex.com>
 
 	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
